<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avior.idan.drawsomething.GuessingHelpFragment"
    android:orientation="vertical"
    android:background="@color/colorPrimary">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_guessing_help"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bullet_point" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guessing_help_text_1"
            android:fontFamily="casual"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bullet_point" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guessing_help_text_2"
            android:fontFamily="casual"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bullet_point" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guessing_help_text_3"
            android:fontFamily="casual"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/guessingHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_help_button"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="casual"
        android:background="@color/colorAccent"/>


</LinearLayout>
